--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-aria-components": "1.0.0-beta.1",
     "react-dom": "^18.2.0",
+    "react-tooltip": "^5.21.5",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
